# OpenSkills

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Justfile  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
.zed/: task.json
docs/: COMPLETION_REPORT.md  GITHUB_SKILLS_REPO_GUIDE.md  MARKETPLACE_PROGRESS.md  REFACTORING_COMPLETE.md  opencode-research.md  skills.json.example
docs/sdk/: README.md  api-reference.md  events.md  examples.md  getting-started.md  types.md
marketplace-server/: README.md  index.js  package.json  test.js
scripts/: download-opencode.sh
src/: app.tsx  index.css  main.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  clippy.toml  config.json  tauri.conf.json
src-tauri/binaries/: opencode-aarch64-apple-darwin  opencode-x86_64-apple-darwin
src-tauri/icons/: icon.icns
src-tauri/resources/skills/code-reviewer/: SKILL.md
src-tauri/resources/skills/create-skill/: SKILL.md
src-tauri/resources/skills/data-processor/: SKILL.md
src-tauri/resources/skills/hello-world/: SKILL.md
src-tauri/resources/skills/question-bank-uploader/: SKILL.md
src-tauri/resources/skills/question-bank-uploader/scripts/: parse_and_upload.py
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  marketplace.rs  sidecar.rs
src/hooks/: useOpencode.ts  (+2 more)
(+19 files in other folders)
